# wasm-rust-cpp-js

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tool-versions.json  tsconfig.base.json  tsconfig.json
.claude/: settings.json
apps/runner-node/: package.json  tsconfig.json
apps/runner-web/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
benches/common/: fixtures.test.ts  fixtures.ts  shape-reference.test.ts  shape-reference.ts
benches/hashmap_int/: spec.json
benches/hashmap_string/: spec.json
benches/interop_calls/: spec.json
benches/matmul/: README.md  spec.json
benches/matmul/rust/bindgen/: Cargo.toml
benches/matmul/rust/bindgen/src/: lib.rs
benches/matmul/rust/raw/: Cargo.toml
benches/matmul/rust/raw/src/: lib.rs
benches/shape_dispatch_homo_dyn/: spec.json
benches/shape_dispatch_homo_static/: spec.json
benches/shape_dispatch_mixed_dyn/: spec.json
benches/shape_dispatch_mixed_static/: spec.json
benches/shape_dispatch_mixed_static/rust/bindgen/: Cargo.toml
benches/shape_dispatch_mixed_static/rust/bindgen/src/: lib.rs
docs/: capture-protocol.md  guidelines.md  roadmap.md  workflow.md  writing-standard.md
docs/pitfalls/: 2026-05-21-phase-1-1-0-execution.md  2026-05-22-phase-1-1-1-w1.md  2026-05-22-pitfalls-workflow.md  2026-05-23-phase-1-1-1-execution.md  2026-05-23-phase-1-1-2-execution.md  2026-05-26-v8-deopt-investigation.md  2026-05-27-phase-1-1-2-1-execution.md  2026-05-28-phase-1-1-3-brainstorm.md  2026-06-02-phase-1-1-3-closed.md  2026-06-11-workflow-cost-redesign-brainstorm.md  2026-06-11-workflow-cost-redesign-execution.md  2026-06-12-workflow-trigger-landing-execution.md  2026-06-13-phase-1-2-hashmap-no-glue-w0.md  2026-06-13-phase-1-2-hashmap-no-glue-w1-w2.md  2026-06-21-phase-1-3-size-attr-w1.md  2026-06-22-phase-1-3-close-out-visual-deliverable.md  2026-06-25-cpp-wasi-sdk-name-section-env-diff.md  2026-06-26-perf-css-unwired-integration-seam.md  2026-07-01-spec-premises-unmeasured.md  README.md
docs/superpowers/: session-state-2026-05-01.md  session-state-2026-05-02.md  session-state-2026-05-05-wave-2.md  session-state-2026-05-05-wave-3.md  session-state-2026-05-05.md  session-state-2026-05-06-wave-4.md  session-state-2026-05-14-phase-1-0-6-closed.md  session-state-2026-05-21-phase-1-1-0-closed.md  session-state-2026-05-22-phase-1-1-1-w1.md  session-state-2026-05-22-pitfalls-workflow.md  session-state-2026-05-23-phase-1-1-1-closed.md  session-state-2026-05-23-phase-1-1-2-closed.md  session-state-2026-05-23-phase-1-1-2-designed.md  session-state-2026-05-26-v8-deopt-rootcause.md
docs/tech_debt/: README.md  addr-of-lint-hazard-plan-checklist.md  bench-debug-timings-docs.md  bench-run-correctness-fail-not-surfaced.md  bindgen-output-view-force-copy.md  bindgen-size-regression-investigation.md  bindgen-thread-local-init-shim-overhead.md  cargo-lock-stage-discipline.md  chromedriver-session-retry.md  clang-tidy-cpp.md  clangd-config-cpp23.md  claude-md-tsx-sandbox-gotcha.md  cpu-throttling-lock-macos.md  dead-ts-output-fields.md  docs-language-consistency.md  firefox-emscripten-noop-5x-slowdown.md  hashmap-int-emscripten-L-correctness.md  hashmap-string-cpp-emplace-latent.md  incorporate-pitfalls-2026-05-21.md  incorporate-pitfalls-2026-05-22.md  incorporate-pitfalls-2026-05-27.md  (+14 more)
scripts/: build-all.ts  build-cpp.ts  build-js.ts  build-rust.ts  clear.ts  fixtures.ts  report.ts  run-matrix.ts  scan-markers.mjs  setup.ts  size-diff.ts  smoke.ts
(+196 files in other folders)
