[workspace]
resolver = "3"
members = [
    "benches/matmul/rust/shared",
    "benches/matmul/rust/raw",
    "benches/matmul/rust/bindgen",
]

[workspace.package]
edition = "2024"
version = "0.0.0"
publish = false

[workspace.lints.rust]
warnings = "deny"
unsafe_op_in_unsafe_fn = "deny"
unsafe_code = "warn"

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"
nursery = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-size]
inherits = "release"
opt-level = "z"
