[workspace]
resolver = "3"
members = [
    "benches/matmul/rust/shared",
    "benches/matmul/rust/raw",
    "benches/matmul/rust/bindgen",
    "benches/interop_calls/rust/raw",
    "benches/interop_calls/rust/bindgen",
    "benches/hashmap_string/rust/bindgen",
    "benches/hashmap_string/rust/raw",
    "benches/hashmap_int/rust/bindgen",
    "benches/hashmap_int/rust/raw",
    "benches/shape_dispatch_homo_static/rust/raw",
    "benches/shape_dispatch_homo_dyn/rust/raw",
    "benches/shape_dispatch_mixed_static/rust/raw",
    "benches/shape_dispatch_mixed_dyn/rust/raw",
    "benches/shape_dispatch_homo_static/rust/bindgen",
    "benches/shape_dispatch_homo_dyn/rust/bindgen",
    "benches/shape_dispatch_mixed_static/rust/bindgen",
    "benches/shape_dispatch_mixed_dyn/rust/bindgen",
]

[workspace.package]
edition = "2024"
version = "0.0.0"
publish = false

[workspace.lints.rust]
warnings = "deny"
unsafe_op_in_unsafe_fn = "deny"
unsafe_code = "warn"

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"
nursery = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-size]
inherits = "release"
opt-level = "z"
