[package]
name = "matmul-rust-bindgen"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-size]
inherits = "release"
opt-level = "z"

# wasm-pack invokes wasm-opt by default. Disable here — the build script
# (scripts/build-rust.ts) runs wasm-opt explicitly with the right feature flags
# for the size profile only.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release-size]
wasm-opt = false
