[package]
name = "shape-dispatch-mixed-static-rust-bindgen"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

# wasm-pack invokes wasm-opt by default. Disable here — the build script
# (scripts/build-rust.ts) runs wasm-opt explicitly with the right feature flags
# for the size profile only.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release-size]
wasm-opt = false

[lints]
workspace = true
